--- a/iTrade/WebContent/index.html
+++ b/iTrade/WebContent/index.html
@@ -1,1 +1,15 @@
-Hi
+<!DOCTYPE html>
+<html>
+
+<head>
+<script type="text/javascript" src="index.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+</head>
+<body onload="myFunction();">
+<a href="broker.html">Create A Broker</a>
+<a href="policy.html">Create A Policy</a>
+<a href="register.html">Sign up!</a>
+<div id="brokers"></div>
+</body>
+
+</html>
