--- a/iTrade/WebContent/policy.html
+++ b/iTrade/WebContent/policy.html
@@ -2,9 +2,9 @@
 
 <html>
 <head>
-<link rel="stylesheet" href="broker.css">
+<link rel="stylesheet" href="policy.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script type="text/javascript" src="broker.js">
+<script type="text/javascript" src="policy.js">
 <!--
 
 //-->
@@ -12,21 +12,20 @@
 </head>
 <body>
 <div id="outer">
-<h1>Create Broker</h1>
+<h1>Create Policy</h1>
 <div id="status" style="text-align: center; width: 100%"></div>
- <label for="name">Name</label><br/>
+ <label for="name">Type</label><br/>
 
  <input type="text" id="name" name="name"/><br/>
 
- <label for="limit">Limit</label><br/>
+ <label for="limit">Frequency</label><br/>
 
  <input type="text" id="limit" name="limit"/><br/>
 
- <label for=time>Trade Time</label><br/>
+ <label for=time>Condition</label><br/>
 
  <input type="text" id="time" name="time"/><br/>
- 
-<br/>
+  <br/>
 <br/>
  <input style="display:block; margin-left: auto; margin-right: auto" type="submit" value="Register" onclick="myFunction();"/>
 </div>
