--- a/iTrade/WebContent/brokers/brokerlist.html
+++ b/iTrade/WebContent/brokers/brokerlist.html
@@ -11,12 +11,17 @@
 </script>
 </head>
 <body onload="brokers();">
+<div id="broker" style="width:200px; display:inline-block"></div>
 <div id="outer">
 <div id="brokers"></div>
 <div style="display: inline-block;">
-<input id="name" type="text"><input type="text" id="limit"><input id="time" type="text"></div>
-<input type="button" value="Create" onclick="createBroker();">
+<label id="label1" for="name">Broker Name</label>
+<input class="create" id="name" type="text">
+<label id="label2" for="limit">Trade Limit</label>
+<input class="create" type="text" id="limit">
+<label id="label3" for="time">Trade Time</label>
+<input class="create" id="time" type="text"></div>
+<input class="create" type="button" value="Create" onclick="createBroker();">
 </div>
 </body>
-
 </html>
